# github-actions-rust

./: .env_example  Cargo.toml  README.md
src/: main.rs
