[package]
name = "sodio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
dotenv = "0.15.0"
libsodium-sys = "0.2.7"
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
